--- a/src/investment_calc/assets/style.css
+++ b/src/investment_calc/assets/style.css
@@ -1,8 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap');
 
-* {
-  box-sizing: border-box;
-}
+ @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap');
+
 
 body {
   margin: 0;
@@ -33,7 +31,7 @@ body {
 
 #user-input {
   padding: 1rem;
-  max-width: 30rem;
+  max-width: 40rem;
   margin: 2rem auto;
   border-radius: 4px;
   background: linear-gradient(180deg, #307e6c, #2b996d);
@@ -49,7 +47,7 @@ body {
   display: block;
   margin-bottom: 0.25rem;
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 0.5rem;
+  font-size: 14px;
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -86,4 +84,4 @@ body {
 
 .center {
   text-align: center;
-}
+} 
